tests/pass/run/for_empty_parity/main.kira
@Main
function main() {
    for item in [] {
        print("unreachable")
    }

    print("done")
    return
}
