tests/fail/semantics/numeric_cast_non_numeric/main.kira
// `Int(...)` only converts numeric operands; passing a string must be rejected.
@Main
function main() {
    print(Int("hello"))
    return
}
